fixed alignement

--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,10 @@ h2 {
   padding-bottom: 0rem;
 }
 
+.navArchivio {
+  text-align: left;
+}
+
 
 }
 
